navbar horizontal overflow bug fix

--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -3,10 +3,16 @@
 	font-weight: bold;
 	text-transform: uppercase;
     }
-	#navbar span.icon {
-	padding: 4px 5px;
-    border: 3px solid #cfd2da;
-    margin-right: 10px;
-    border-radius: 35px;
-	}
+    	#navbar span.icon {
+    	padding: 4px 5px;
+        border: 3px solid #cfd2da;
+        margin-right: 10px;
+        border-radius: 35px;
+    	}
+	
+	.navbar-nav {
+    margin: 0px;
+    padding: 0px 2px;
+    }
+
 }
