--- a/src/sass/pages/_login.scss
+++ b/src/sass/pages/_login.scss
@@ -4,6 +4,7 @@
     margin-top: 60px;
     background: #1a1c22;
     border: 5px solid #1ca8dd;
+    border-radius:15px;
 
 	.login-icon {
 	position: absolute;
